--- a/todo_website/todo_crud/templates/todo_crud/index.html
+++ b/todo_website/todo_crud/templates/todo_crud/index.html
@@ -7,12 +7,25 @@
     <body>
         <h1>TODO list</h1>
 
-        {% if todos %}
+        {% if formset.forms %}
+        <form method="POST">
+            {% csrf_token %}
+            {{ formset.management_form }}
             <ul>
-            {% for todo in todos %}
-                <li>{{ todo.title }}</li>
+            {% for form in formset %}
+                <li>
+                    {{ form.id }}
+                    {{ form.done }}
+                    {% if form.done.value %}
+                    <s>{{ form.instance.title }}</s>
+                    {% else %}
+                    {{ form.instance.title }}
+                    {% endif %}
+                </li>
             {% endfor %}
             </ul>
+            <input type="submit" value="Update"/>
+        </form>
         {% else %}
             <p>Nothing TODO.</p>
         {% endif %}
