feat: add task creation

--- a/todo_website/todo_crud/templates/todo_crud/index.html
+++ b/todo_website/todo_crud/templates/todo_crud/index.html
@@ -32,5 +32,9 @@
         {% else %}
             <p>Nothing TODO.</p>
         {% endif %}
+
+        <p>
+            <a href="{% url 'new' %}">New TODO</a>
+        </p>
     </body>
 </html>
