--- a/todo_website/todo_crud/templates/todo_crud/todo_form.html
+++ b/todo_website/todo_crud/templates/todo_crud/todo_form.html
@@ -1,22 +1,19 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>TODO new</title>
-    </head>
-    <body>
-        <h1>TODO new</h1>
+{% extends "todo_crud/base.html" %}
 
-        <form method="POST">
-            {% csrf_token %}
-            <dl>
-                <dt>Title</dt>
-                <dd>{{ form.title }}</dd>
+{% block title %}TODO new{% endblock %}
 
-                <td>Description</td>
-                <dd>{{ form.description }}</dd>
-            </dl>
-            <input type="submit" value="New" />
-        </form>
-    </body>
-</html>
+{% block content %}
+<h1>TODO new</h1>
+
+<form method="POST">
+    {% csrf_token %}
+    <dl>
+        <dt>Title</dt>
+        <dd>{{ form.title }}</dd>
+
+        <dt>Description</dt>
+        <dd>{{ form.description }}</dd>
+    </dl>
+    <input type="submit" value="Add" class="btn btn-warning" />
+</form>
+{% endblock %}
