feat: add icons

--- a/todo_website/todo_crud/templates/todo_crud/todo_form.html
+++ b/todo_website/todo_crud/templates/todo_crud/todo_form.html
@@ -14,6 +14,9 @@
         <dt>Description</dt>
         <dd>{{ form.description }}</dd>
     </dl>
-    <input type="submit" value="Add" class="btn btn-warning" />
+
+    <button type="submit" class="btn btn-warning">
+        <i class="bi bi-plus-square"></i> Add
+    </button>
 </form>
 {% endblock %}
