--- a/todo_website/todo_crud/templates/todo_crud/index.html
+++ b/todo_website/todo_crud/templates/todo_crud/index.html
@@ -38,7 +38,9 @@
     </p>
 
     <p>
-        <input type="submit" value="Update" class="btn btn-primary"/>
+        <button type="submit" value="Update" class="btn btn-primary">
+            <i class="bi bi-cloud-upload"></i> Update
+        </button>
     </p>
 </form>
 {% else %}
@@ -46,6 +48,6 @@
 {% endif %}
 
 <p>
-    <a href="{% url 'new' %}" class="btn btn-success">New</a>
+    <a href="{% url 'new' %}" class="btn btn-success"><i class="bi bi-plus-square-dotted"></i> New</a>
 </p>
 {% endblock %}
