--- a/todo_website/todo_crud/templates/todo_crud/base.html
+++ b/todo_website/todo_crud/templates/todo_crud/base.html
@@ -8,10 +8,21 @@
         <link rel="stylesheet" href="{% static 'todo_crud/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'todo_crud/bootstrap-icons.css' %}">
         <style>
-            {% block style %}
-            .done {
-                text-decoration: line-through;
+            body {
+                --bs-body-bg-rgb: 13,110,253;
+                --bd-accent-rgb: 255,228,132;
+                --bd-violet-rgb: 112.520718,44.062154,249.437846;
+                --bd-pink-rgb: 214,51,132;
+
+                background-image:
+                    radial-gradient(ellipse at top left, rgba(var(--bs-primary-rgb), 0.5), transparent 50%),
+                    radial-gradient(ellipse at top right, rgba(var(--bd-accent-rgb), 0.5), transparent 50%),
+                    radial-gradient(ellipse at center right, rgba(var(--bd-violet-rgb), 0.5), transparent 50%),
+                    radial-gradient(ellipse at center left, rgba(var(--bd-pink-rgb), 0.5), transparent 50%);
+                background-attachment: fixed;
             }
+
+            {% block style %}
             {% endblock %}
         </style>
     </head>
